syntax = "proto3";

package Business;
option go_package = "GrpcTest/MyProto";

import "google/protobuf/timestamp.proto";


service View {

  rpc Login        (UserID)        returns (ApplicationArray);
  rpc Applications(Application)    returns (succee);

}

message UserID {
  int32 UserID=1;
}


message succee{
  bool   flag    =1;
  string ErrInfo =2;
}



message ApplicationArray {
  repeated Application ApplicationsList=1;
  repeated Application MyApplications=2;
}

message Application {
  string name = 1;
  int32 user_id = 2;
  string message = 3;
  google.protobuf.Timestamp start_time = 4;
  google.protobuf.Timestamp end_time = 5;
  int32 department = 6;
  int32 leave_type = 7;
  int32   state    =8 ;

}
